# open-control

./: .env.example  .gitignore  DATABASE_GUIDE.md  README.md  jarvis.db  main.py  pyproject.toml  requirements.txt  test_database.py  test_fix.py  test_tools.py
.agents/tools/calculator/: tool.md
.agents/tools/info/: tool.md
.agents/tools/web-search/: tool.md
docs/: PERSISTENCE_SUMMARY.md  TOOLS_GUIDE.md
specs/: PRD.md  agent-loop.md  architecture.md  interface-web.md  memory.md  skill-user.md
src/app/: __init__.py  streamlit_app.py
src/app/components/: __init__.py  chat_window.py  sidebar.py
src/app/services/: __init__.py  agent_service.py
src/app/state/: session_manager.py
src/core/: __init__.py
src/core/controller/: agent_controller.py
src/core/database/: __init__.py  database.py  models.py  repositories.py
src/core/tools/: __init__.py  executor.py  implementations.py  loader.py  router.py  schemas.py
test/: test_database.py  test_fix.py  test_refactor.py  test_threads.py  test_tools.py
